# pubmedstudies

backend/: .env  fly.toml.backup  pyproject.toml
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: research.py
backend/scripts/: generate_manuscript.py  generate_manuscript_api.py  generate_pharyngeal_manuscript.py  test_openai.py
backend/utils/manuscript/: export.py  generator.py
backend/utils/openai/: client.py  parser.py  summarizer.py
backend/utils/pubmed/: search.py
backend/utils/statistics/: meta_analysis.py
frontend/: .env  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: AIInteraction.tsx  ManuscriptPreview.tsx  ResearchForm.tsx
frontend/src/hooks/: useManuscriptGeneration.ts
frontend/src/lib/: aiInteraction.ts  api.ts  getCustomDemoManuscript.ts  getPharyngealReconstructionManuscript.ts
