[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
psycopg = {extras = ["binary"], version = "^3.2.6"}
openai = "^1.73.0"
python-dotenv = "^1.1.0"
biopython = "^1.85"
python-docx = "^1.1.2"
pdfkit = "^1.0.0"
markdown = "^3.8"
weasyprint = "^65.0"
pandas = "^2.2.3"
scipy = "^1.15.2"
statsmodels = "^0.14.4"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
